[gd_scene load_steps=5 format=3 uid="uid://cwrewt74ciudb"]

[ext_resource type="Theme" uid="uid://dld6bm6h35xsv" path="res://UI/theme.tres" id="1_br301"]
[ext_resource type="Script" path="res://Scripts/pause.gd" id="2_x820i"]
[ext_resource type="Material" uid="uid://r0cgpqwm0irh" path="res://Materials/blur.tres" id="3_ojhc4"]
[ext_resource type="Theme" uid="uid://cuqwq507yae8h" path="res://UI/style/title.tres" id="4_a8n45"]

[node name="Pause" type="Control" node_paths=PackedStringArray("pause_btn", "pause_menu")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_br301")
script = ExtResource("2_x820i")
pause_btn = NodePath("pauseBtn")
pause_menu = NodePath("TextureRect")

[node name="pauseBtn" type="Button" parent="."]
layout_mode = 2
offset_left = 15.0
offset_top = 16.0
offset_right = 149.0
offset_bottom = 71.0
size_flags_vertical = 3
text = "Pause
"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
material = ExtResource("3_ojhc4")
offset_left = -271.0
offset_top = -128.0
offset_right = 2138.0
offset_bottom = 1248.0

[node name="Panel" type="Panel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.5
offset_top = -392.0
offset_right = 274.5
offset_bottom = 342.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -171.0
offset_right = 97.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00178, 1)

[node name="resume" type="Button" parent="TextureRect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume
"

[node name="main Menu" type="Button" parent="TextureRect/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Main menu
"

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -239.0
offset_top = 28.0
offset_right = 149.0
offset_bottom = 149.0
grow_horizontal = 2
theme = ExtResource("4_a8n45")
theme_type_variation = &"Subtitle"
bbcode_enabled = true
text = "PAUSE"

[connection signal="pressed" from="pauseBtn" to="." method="_on_pause_btn_pressed"]
[connection signal="pressed" from="TextureRect/Panel/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="TextureRect/Panel/VBoxContainer/main Menu" to="." method="_on_main_menu_pressed"]
